Backend multi language support

--- a/frontend/locale/de.json
+++ b/frontend/locale/de.json
@@ -1,4 +1,6 @@
 {
     "toc": "Inhaltsverzeichnis",
-    "copyright": "&copy; 2025 - Alle Rechte vorbehalten."
+    "copyright": "&copy; 2025 - Alle Rechte vorbehalten.",
+    "docs of": "Dokumentation von",
+    "title": "Dokumentations Anwendung"
 }
