--- a/frontend/locale/en.json
+++ b/frontend/locale/en.json
@@ -1,4 +1,6 @@
 {
     "toc": "Table of Contents",
-    "copyright": "&copy; 2025 - All rights reserved."
+    "copyright": "&copy; 2025 - All rights reserved.",
+    "docs of": "Documentation of",
+    "title": "Documentation App"
 }
