--- a/frontend/locale/de.json
+++ b/frontend/locale/de.json
@@ -2,5 +2,9 @@
     "toc": "Inhaltsverzeichnis",
     "copyright": "&copy; 2025 - Alle Rechte vorbehalten.",
     "docs of": "Dokumentation von",
-    "title": "Dokumentations Anwendung"
+    "title": "Dokumentations Anwendung",
+    "no_project_title": "Projekt wählen zum bearbeiten",
+    "no_project_description": "Wähle ein Projekt aus der linken Spalte um Posts zu erstellen oder zu bearbeiten.",
+    "all_projects": "Alle Projekte",
+    "add_post": "Pfosten hinzufügen"
 }
