--- a/Backend/locale/de.json
+++ b/Backend/locale/de.json
@@ -1,4 +1,6 @@
 {
     "project_edit_title": "Bitte wähle ein Projekt aus der linken Spalte!",
-    "posts_description": "Hier kannst du die Posts bearbeiten. Bitte wähle zunächst das Projekt, in dem sich der Post befindet."
+    "posts_description": "Hier kannst du die Posts bearbeiten. Bitte wähle zunächst das Projekt, in dem sich der Post befindet.",
+    "custom_css_title": "Benutzerdefiniertes Stylesheet anlegen / editieren",
+    "custom_css_desc": "You can edit or control certain elements of your frontend design here."
 }
