--- a/frontend/locale/de.json
+++ b/frontend/locale/de.json
@@ -17,4 +17,7 @@
     "delete_user_confirmation": "Bist du sicher, dass du deinen Account unwiederruflich löschen möchtest?",
     "all_projects": "Alle Projekte",
     "add_post": "Pfosten hinzufügen",
+    "custom_css_title": "Custom CSS changes",
+    "custom_css_desc": "You can edit or control certain elements of your frontend design here.",
+    "custom_css_sidebar_title": "Actions"
 }
