Resolved Merge issues

--- a/frontend/locale/de.json
+++ b/frontend/locale/de.json
@@ -1,5 +1,4 @@
 {
-    
     "toc": "Inhaltsverzeichnis",
     "copyright": "&copy; 2025 - Alle Rechte vorbehalten.",
     "docs of": "Dokumentation von",
@@ -15,9 +14,31 @@
     "confirm_with_password": "Mit Passwort bestätigen",
     "delete_user?": "Benutzer löschen?",
     "delete_user_confirmation": "Bist du sicher, dass du deinen Account unwiederruflich löschen möchtest?",
-    "all_projects": "Alle Projekte",
+    "projectname": "Projektname",
+    "edit_project_name": "Projektnamen ändern",
+    "projectdescription": "Projektbeschreibung",
+    "postname": "Postname",
+    "postcontent": "Hier ist Platz für den Inhalt deines Posts!",
     "add_post": "Pfosten hinzufügen",
-    "custom_css_title": "Custom CSS changes",
-    "custom_css_desc": "You can edit or control certain elements of your frontend design here.",
-    "custom_css_sidebar_title": "Actions"
+    "add_post?": "Pfosten hinzufügen?",
+    "add_project": "Projekt hinzufügen",
+    "add_project?": "Projekt hinzufügen?",
+    "delete_project?": "Projekt löschen?",
+    "delete_post?": "Post löschen?",
+    "delete_project_description": "Bist du dir sicher, dass du das Projekt unwiederuflich löschen möchtest?",
+    "delete_post_description": "Bist du dir sicher, dass du deinen Post unwiederuflich löschen möchtest?",
+    "admin_heading": "Admin Bereich",
+    "edit_projects_heading": "Projekte bearbeiten",
+    "styling_heading": "Optische Anpassung",
+    "user_account_heading": "Benutzerbereich",
+    "edit_profile_heading": "Profil bearbeiten",
+    "submit": "Absenden",
+    "edit": "Bearbeiten",
+    "change_password": "Passwort ändern",
+    "close": "Schließen",
+    "delete": "Löschen",
+    "delete_user": "User löschen",
+    "custom_css_title": "Benutzerdefiniertes Stylesheet anlegen / editieren",
+    "custom_css_desc": "Hier können Sie bestimmte Elemente des Frontends mit Hilfe von CSS manipulieren oder verändern.",
+    "custom_css_sidebar_title": "Aktionen"
 }
