--- a/frontend/locale/de.json
+++ b/frontend/locale/de.json
@@ -6,6 +6,7 @@
     "no_project_title": "Projekt wählen zum bearbeiten",
     "no_project_description": "Wähle ein Projekt aus der linken Spalte um Posts zu erstellen oder zu bearbeiten.",
     "documentation_empty": "Dieses Projekt ist leider leer...",
+
     "firstname": "Vorname",
     "lastname": "Nachname",
     "old_password": "Aktuelles Passwort",
@@ -14,6 +15,8 @@
     "confirm_with_password": "Mit Passwort bestätigen",
     "delete_user?": "Benutzer löschen?",
     "delete_user_confirmation": "Bist du sicher, dass du deinen Account unwiederruflich löschen möchtest?",
+
+    "all_projects": "Alle Projekte",
     "projectname": "Projektname",
     "edit_project_name": "Projektnamen ändern",
     "projectdescription": "Projektbeschreibung",
@@ -27,17 +30,20 @@
     "delete_post?": "Post löschen?",
     "delete_project_description": "Bist du dir sicher, dass du das Projekt unwiederuflich löschen möchtest?",
     "delete_post_description": "Bist du dir sicher, dass du deinen Post unwiederuflich löschen möchtest?",
+
     "admin_heading": "Admin Bereich",
     "edit_projects_heading": "Projekte bearbeiten",
     "styling_heading": "Optische Anpassung",
     "user_account_heading": "Benutzerbereich",
     "edit_profile_heading": "Profil bearbeiten",
+
     "submit": "Absenden",
     "edit": "Bearbeiten",
     "change_password": "Passwort ändern",
     "close": "Schließen",
     "delete": "Löschen",
     "delete_user": "User löschen",
+    
     "custom_css_title": "Benutzerdefiniertes Stylesheet anlegen / editieren",
     "custom_css_desc": "Hier können Sie bestimmte Elemente des Frontends mit Hilfe von CSS manipulieren oder verändern.",
     "custom_css_sidebar_title": "Aktionen"
