--- a/frontend/locale/en.json
+++ b/frontend/locale/en.json
@@ -46,5 +46,8 @@
     
     "custom_css_title": "Custom CSS changes",
     "custom_css_desc": "You can edit or control certain elements of your frontend design here.",
-    "custom_css_sidebar_title": "Actions"
+    "custom_css_sidebar_title": "Actions",
+
+    "to_frontend": "View in Frontend",
+    "language": "🇩🇪"
 }
